<resources>
    <string name="app_name">HairDew</string>
    //Strings for activity_login
    <string name="header">Go Back to Nature, Back to Natural</string>
    <string name="app_info_section_1">When caring for your precious coils, you deserve the best.</string>
    <string name="buttonCreate">Create</string>
    <string name="buttonExplore">Explore</string>
    <string name="buttonFAQ">FAQ</string>
    //Strings for FAQ
    <string name="Question1Q">How Does It Work?</string>
    <string name="Question1A">Hair Dew is an application that allows you to create organic hair products with just the click of a few buttons. By clicking on the Create tab you are taken to a page that explores the different steps of making your own product. At the bottom of this page you click, once again, on the Create button and can begin the process of choosing what goes into your very own product. Ideally you would choose a base, an oil, and perhaps a scent. But feel free to mix and match as you please. You\'re the creator and this is your lab. </string>
    <string name="Question2Q">Can I Purchase Products Individually Or Must I Follow All The Steps? </string>
    <string name="Question2A">We do sell products individually. Go to the Create page where you begin to build your own product and at the top there is the option of purchasing products individually. </string>
    <string name="Question3Q">Are Refunds Available?</string>
    <string name="Question3A">We would hate to hear that you are not satisfied with your creation and we provide a place for feedback however, we do not accept returns nor do we make refunds.</string>
    <string name="Question4Q">Who Owns Hair Dew?</string>
    <string name="Question4A">Hair Dew was founded by Jillian Johnson. You can read more about her here.</string>
    <string name="Question5Q">I Don\'t See What I Want, Do You Take Personal Requests?</string>
    <string name="Question5A">We love feedback and encourage requests and critics of many kinds. If you would like to order something we don\t have listed we will source it out for you. </string>
    //Strings for activity_create
    <string name="headerCreate">We\'re All Mad Here</string>
    <string name="chooseBase">Choose Your Base</string>
    <string name="chooseOil">Choose Your Oil</string>
    <string name="chooseScent">Choose Your Scent</string>
    <string name="chooseBaseMoreInfo">"This is the nourishing foundation for your creation."</string>
    <string name="startCreatingButton">Create</string>
    //Strings for activity_build_product
    <string name="step1">Step 1: Nourishing Foundation</string>
    <string name="step2">Step 2: Nourishing Oil </string>
    <string name="step3">Step 3: Essential Infusion</string>
    <string name="baseCheckBox1">Raw Shea Butter</string>
    <string name="baseCheckBox2">White Shea Butter</string>
    <string name="oilCheckBox1">Jojoba Oil</string>
    <string name="oilCheckBox2">Coconut Oil</string>
    <string name="oilCheckBox3">GrapeSeed Oil</string>
    <string name="oilCheckBox4">Jamaican Black Castor Oil</string>
    <string name="infusionOptions1">Rose Water</string>
    <string name="infusionOptions2">Vanilla</string>
    <string name="infusionOptions3">Lavender Oil</string>
    <string name="infusionOptions4">Peppermint Oil</string>
    <string name="infusionOptions5">Tea Tree Oil</string>
    //Strings for activity_submit
    <string name="title">Order Summary</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>

